[package]
name = "calculator-compiler"
description = "calculator compiler based on llvm"
version = "0.0.0"
authors = ["Vinh Nguyen <nghuyenthevinh@gmail.com>"]
edition = "2018"

[dependencies]
calculator-ast-parser = { path="../ast-parser" }
rust_decimal = "1.32.0"
clap = { version = "4.4.6", features = ["derive"] }
inkwell = { version = "0.2.0", features = [
    "llvm14-0",
]}

[[bin]]
name = "main"
path = "src/main.rs"
