[package]
name = "calculator-interpreter"
version = "0.0.0"
authors = ["Vinh Nguyen <nghuyenthevinh@gmail.com>"]
edition = "2018"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
anyhow = "1.0"
ordered-float = { version = "4.1.0", default-features = false }
calculator-ast-parser = { path="../ast-parser" }
rust_decimal = "1.32.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
