[package]
name = "calculator-interpreter"
description = "interpreter text to rust"
version = "0.0.0"
authors = ["Vinh Nguyen <nghuyenthevinh@gmail.com>"]
edition = "2018"

[dependencies]
calculator-ast-parser = { path="../ast-parser" }
clap = { version = "4.4.6", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"
